[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/dialogic-builder/Main.gd" type="Script" id=1]

[node name="Dialogic Builder" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1200.0
margin_bottom = 200.0
script = ExtResource( 1 )

[node name="Container" type="VBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 18.0

[node name="CharContainer" type="VBoxContainer" parent="Container"]
margin_right = 720.0
margin_bottom = 218.0

[node name="FileDialogChar" type="FileDialog" parent="Container/CharContainer"]
margin_right = 720.0
margin_bottom = 1280.0
window_title = "打开目录"
mode = 2
filters = PoolStringArray( "*.json ; Dialogic Characters Files" )

[node name="Label" type="Label" parent="Container/CharContainer"]
margin_right = 720.0
margin_bottom = 36.0
text = "Characters Folder:"

[node name="Edit" type="TextEdit" parent="Container/CharContainer"]
margin_top = 40.0
margin_right = 720.0
margin_bottom = 72.0
rect_min_size = Vector2( 0, 32 )
text = "res://dialogic/characters"
wrap_enabled = true

[node name="ButtonLoad" type="Button" parent="Container/CharContainer"]
margin_top = 76.0
margin_right = 720.0
margin_bottom = 118.0
text = "Load Folder"

[node name="CharsList" type="ItemList" parent="Container/CharContainer"]
margin_top = 122.0
margin_right = 720.0
margin_bottom = 218.0
rect_min_size = Vector2( 0, 96 )

[node name="ThemeContainer" type="VBoxContainer" parent="Container"]
margin_top = 222.0
margin_right = 720.0
margin_bottom = 408.0

[node name="FileDialogTheme" type="FileDialog" parent="Container/ThemeContainer"]
margin_right = 720.0
margin_bottom = 1280.0
window_title = "打开目录"
mode = 2
filters = PoolStringArray( "*.cfg ; Dialogic Themes Files" )

[node name="Label" type="Label" parent="Container/ThemeContainer"]
margin_right = 720.0
margin_bottom = 36.0
text = "Themes Folder:"

[node name="Edit" type="TextEdit" parent="Container/ThemeContainer"]
margin_top = 40.0
margin_right = 720.0
margin_bottom = 72.0
rect_min_size = Vector2( 0, 32 )
text = "res://dialogic/themes"
wrap_enabled = true

[node name="ButtonLoad" type="Button" parent="Container/ThemeContainer"]
margin_top = 76.0
margin_right = 720.0
margin_bottom = 118.0
text = "Load Folder"

[node name="ThemesList" type="ItemList" parent="Container/ThemeContainer"]
margin_top = 122.0
margin_right = 720.0
margin_bottom = 186.0
rect_min_size = Vector2( 0, 64 )

[node name="CsvContainer" type="VBoxContainer" parent="Container"]
margin_top = 412.0
margin_right = 720.0
margin_bottom = 562.0

[node name="FileDialog" type="FileDialog" parent="Container/CsvContainer"]
margin_right = 720.0
margin_bottom = 1280.0
window_title = "打开文件"
mode = 0
access = 2
filters = PoolStringArray( "*.csv ; CSV Files" )

[node name="Label" type="Label" parent="Container/CsvContainer"]
margin_right = 720.0
margin_bottom = 36.0
text = "Your Csv File Path:"

[node name="Edit" type="TextEdit" parent="Container/CsvContainer"]
margin_top = 40.0
margin_right = 720.0
margin_bottom = 104.0
rect_min_size = Vector2( 0, 64 )
wrap_enabled = true

[node name="ButtonLoad" type="Button" parent="Container/CsvContainer"]
margin_top = 108.0
margin_right = 720.0
margin_bottom = 150.0
text = "Load File"

[node name="OutputContainer" type="VBoxContainer" parent="Container"]
margin_top = 566.0
margin_right = 720.0
margin_bottom = 684.0

[node name="FileDialogOutput" type="FileDialog" parent="Container/OutputContainer"]
margin_right = 216.0
margin_bottom = 130.0
window_title = "保存文件"
filters = PoolStringArray( "*.json ; Dialogic Timeline File" )

[node name="Label" type="Label" parent="Container/OutputContainer"]
margin_right = 720.0
margin_bottom = 36.0
text = "Output Timeline File:"

[node name="Edit" type="TextEdit" parent="Container/OutputContainer"]
margin_top = 40.0
margin_right = 720.0
margin_bottom = 72.0
rect_min_size = Vector2( 0, 32 )
text = "res://dialogic/timelines"
wrap_enabled = true

[node name="ButtonSave" type="Button" parent="Container/OutputContainer"]
margin_top = 76.0
margin_right = 720.0
margin_bottom = 118.0
text = "Save To..."

[node name="ButtonBuilder" type="Button" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -28.0
margin_bottom = -8.0
text = "Builder!"

[connection signal="dir_selected" from="Container/CharContainer/FileDialogChar" to="." method="_on_FileDialogChar_dir_selected"]
[connection signal="button_up" from="Container/CharContainer/ButtonLoad" to="." method="_on_ButtonLoadChar_button_up"]
[connection signal="dir_selected" from="Container/ThemeContainer/FileDialogTheme" to="." method="_on_FileDialogTheme_dir_selected"]
[connection signal="button_up" from="Container/ThemeContainer/ButtonLoad" to="." method="_on_ButtonLoadTheme_button_up"]
[connection signal="file_selected" from="Container/CsvContainer/FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="button_up" from="Container/CsvContainer/ButtonLoad" to="." method="_on_ButtonLoad_button_up"]
[connection signal="dir_selected" from="Container/OutputContainer/FileDialogOutput" to="." method="_on_FileDialogOutput_dir_selected"]
[connection signal="file_selected" from="Container/OutputContainer/FileDialogOutput" to="." method="_on_FileDialogOutput_file_selected"]
[connection signal="pressed" from="Container/OutputContainer/ButtonSave" to="." method="_on_ButtonSave_pressed"]
[connection signal="pressed" from="ButtonBuilder" to="." method="_on_ButtonBuilder_pressed"]
